fix image paths in index.html for consistency

--- a/lab6/src/index.html
+++ b/lab6/src/index.html
@@ -33,7 +33,7 @@
                 <a href="#reserve"
                     class="t200e flex justify-center items-center text-2xl bg-blue-500 hover:bg-blue-700 text-white px-5 py-3 my-5 focus:outline-none">
                     Reserve Now
-                    <img src="/src/imgs/icons/chevronright.png" class="ml-2 w-5 h-auto">
+                    <img src="./imgs/icons/chevronright.png" class="ml-2 w-5 h-auto">
                 </a>
             </div>
         </div>
@@ -255,12 +255,12 @@
                             <button type="reset"
                                 class="t200e flex justify-center items-center text-2xl bg-red-500 hover:bg-red-700 text-white px-5 py-3 my-5 focus:outline-none">
                                 Reset
-                                <img src="/src/imgs/icons/chevronright.png" class="ml-2 w-5 h-auto">
+                                <img src="./imgs/icons/chevronright.png" class="ml-2 w-5 h-auto">
                             </button>
                             <button type="submit" id="submit-button"
                                 class="t200e flex justify-center items-center text-2xl bg-blue-500 hover:bg-blue-700 text-white px-5 py-3 my-5 focus:outline-none">
                                 Submit
-                                <img src="/src/imgs/icons/chevronright.png" class="ml-2 w-5 h-auto">
+                                <img src="./imgs/icons/chevronright.png" class="ml-2 w-5 h-auto">
                             </button>
                         </div>
                     </div>
