--- a/lab6/src/index.html
+++ b/lab6/src/index.html
@@ -22,7 +22,7 @@
         <!-- landing section -->
         <div class="w-full h-screen relative">
             <!-- we make the image appear in absolute positioning so that text can appear above it -->
-            <img src="./imgs/landing.jpg" class="brightness-50 absolute inset-0 object-cover w-full h-full">
+            <img src="landing.jpg" class="brightness-50 absolute inset-0 object-cover w-full h-full">
 
             <div class="relative flex flex-col justify-center items-center h-full p-5">
                 <h1 class="text-4xl font-bold text-white text-center">
@@ -33,14 +33,14 @@
                 <a href="#reserve"
                     class="t200e flex justify-center items-center text-2xl bg-blue-500 hover:bg-blue-700 text-white px-5 py-3 my-5 focus:outline-none">
                     Reserve Now
-                    <img src="./imgs/icons/chevronright.png" class="ml-2 w-5 h-auto">
+                    <img src="chevronright.png" class="ml-2 w-5 h-auto">
                 </a>
             </div>
         </div>
     </div>
     <div class="z-20 relative">
         <form id="reserve" class="w-full h-screen relative" action="submitted.html">
-            <img src="./imgs/2.jpg" class="brightness-50 absolute inset-0 object-cover w-full h-full">
+            <img src="2.jpg" class="brightness-50 absolute inset-0 object-cover w-full h-full">
 
             <div class="relative flex flex-col justify-center items-center w-full h-full p-5">
                 <div class="w-full flex flex-col justify-center items-center top-0 absolute py-10">
@@ -255,12 +255,12 @@
                             <button type="reset"
                                 class="t200e flex justify-center items-center text-2xl bg-red-500 hover:bg-red-700 text-white px-5 py-3 my-5 focus:outline-none">
                                 Reset
-                                <img src="./imgs/icons/chevronright.png" class="ml-2 w-5 h-auto">
+                                <img src="chevronright.png" class="ml-2 w-5 h-auto">
                             </button>
                             <button type="submit" id="submit-button"
                                 class="t200e flex justify-center items-center text-2xl bg-blue-500 hover:bg-blue-700 text-white px-5 py-3 my-5 focus:outline-none">
                                 Submit
-                                <img src="./imgs/icons/chevronright.png" class="ml-2 w-5 h-auto">
+                                <img src="chevronright.png" class="ml-2 w-5 h-auto">
                             </button>
                         </div>
                     </div>
