--- a/lab6/src/submitted.html
+++ b/lab6/src/submitted.html
@@ -11,7 +11,7 @@
 <body class="overflow-x-hidden focus:outline-none font-sans">
     <div class="z-10" id="end" class="">
         <div class="w-full h-screen relative">
-            <img src="./imgs/hotelroom.jpg" class="brightness-50 absolute inset-0 object-cover w-full h-full">
+            <img src="hotelroom.jpg" class="brightness-50 absolute inset-0 object-cover w-full h-full">
             <div class="relative flex flex-col justify-center items-center h-full p-5">
                 <h1 class="text-4xl font-extralight text-white text-center">
                     You have been successfully reserved a room at
